<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<!-- ATUALIZADO FASE 4 - Spring Boot 3.2.x (Spring 6 + Jakarta EE) -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.1</version>
		<relativePath/>
	</parent>

	<groupId>com.algaworks</groupId>
	<artifactId>brewer</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>brewer</name>
	<description>Sistema de Gerenciamento de Cervejaria</description>

	<!-- ATUALIZADO FASE 3 - Mudado de war para jar (embedded Tomcat) -->
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- ATUALIZADO FASE 2 - Java 17 LTS -->
		<java.version>17</java.version>

		<!-- thumbnailator - Gerar thumbmail -->
		<!-- https://github.com/coobird/thumbnailator -->
		<thumbnailator.version>0.4.20</thumbnailator.version>

		<!-- Thymeleaf extras data attribute -->
		<thymeleaf-extras-data-attribute.version>2.0.1</thymeleaf-extras-data-attribute.version>

		<!-- JasperReports - Geração de relatórios PDF -->
		<!-- OPTIONAL FIX: Phase 13 - Low Priority Issue #1 -->
		<!-- Aligned jasperreports-fonts version to match jasperreports 6.21.2 -->
		<jasperreports.version>6.21.2</jasperreports.version>
		<jasperreports-fonts.version>6.21.2</jasperreports-fonts.version>

		<!-- AWS SDK v2 - S3 Storage -->
		<!-- MIGRATION: Phase 14 - Migrated from AWS SDK v1 (1.12.565) to v2 (2.29.29) -->
		<!-- Benefits: Better performance, async support, modern API design, active support -->
		<aws-sdk.version>2.29.29</aws-sdk.version>
	</properties>

	<dependencies>
		<!-- Spring Boot Web Starter (inclui Spring MVC, Tomcat, Jackson) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- Spring Boot Data JPA Starter (inclui Spring Data JPA, Hibernate) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- Spring Boot Security Starter -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- Spring Boot Thymeleaf Starter -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<!-- Spring Boot Validation Starter -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- Spring Boot Actuator - Health checks and metrics -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!-- Spring Boot Mail -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<!-- Thymeleaf + Spring Security Integration -->
		<!-- FASE 4: Atualizado para springsecurity6 (Spring Boot 3) -->
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
		</dependency>

		<!-- Thymeleaf Layout Dialect -->
		<dependency>
			<groupId>nz.net.ultraq.thymeleaf</groupId>
			<artifactId>thymeleaf-layout-dialect</artifactId>
		</dependency>

		<!-- Thymeleaf extras data attribute -->
		<dependency>
			<groupId>com.github.mxab.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-data-attribute</artifactId>
			<version>${thymeleaf-extras-data-attribute.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- MySQL Driver -->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Flyway Migration -->
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-mysql</artifactId>
		</dependency>

		<!-- Guava Cache -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.5.0-jre</version>
			<scope>compile</scope>
		</dependency>

		<!-- Spring Boot Guava Cache Support (removido em Spring Boot, usar manualmente) -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
		</dependency>

		<!-- Apache Commons BeanUtils -->
		<!-- SECURITY FIX: Updated from 1.9.4 to 1.11.0 to address CVE-2025-48734 -->
		<!-- CVE-2025-48734: Improper Access Control vulnerability allowing remote code execution -->
		<!-- Fix: Version 1.11.0 includes BeanIntrospector that blocks "declaredClass" property access -->
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.11.0</version>
			<scope>compile</scope>
		</dependency>

		<!-- Thumbnailator - Gerar thumbnail -->
		<dependency>
			<groupId>net.coobird</groupId>
			<artifactId>thumbnailator</artifactId>
			<version>${thumbnailator.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- JasperReports - Geração de relatórios PDF -->
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>${jasperreports.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports-fonts</artifactId>
			<version>${jasperreports-fonts.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- AWS SDK v2 - S3 Storage -->
		<!-- MIGRATION: Phase 14 - Migrated from v1 to v2 -->
		<!-- v2 provides: Better performance, async APIs, modern design, active support -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>s3</artifactId>
			<version>${aws-sdk.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- AWS SDK v2 - URL Connection Client -->
		<!-- Required for synchronous HTTP operations -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>url-connection-client</artifactId>
			<version>${aws-sdk.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- Spring Boot DevTools (desenvolvimento) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- Spring Boot Starter Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Spring Security Test -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- FASE 5: JUnit 5 (Jupiter) - Migração de JUnit 4 -->
		<!-- Spring Boot Starter Test já inclui JUnit 5, mas vamos ser explícitos -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Testcontainers - Testes de integração com containers -->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>mysql</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<!-- Enable resource filtering for Maven property substitution in application.properties -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>

		<plugins>
			<!-- Spring Boot Maven Plugin -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-devtools</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- Maven Surefire Plugin - Unit Tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*Tests.java</include>
					</includes>
					<argLine>-Xmx1024m</argLine>
					<!-- Environment variables are inherited automatically by Surefire -->
					<!-- Spring Boot will read them via ${VAR:default} syntax in application-test.properties -->
				</configuration>
			</plugin>

			<!-- Maven Surefire Report Plugin - Test Reports -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>

			<!-- JaCoCo - Code Coverage -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>